--- a/Wp.WpfDemo/Wp.WpfDemo.UIL.TestHandyControl/Wp.WpfDemo.UIL.TestHandyControl.csproj
+++ b/Wp.WpfDemo/Wp.WpfDemo.UIL.TestHandyControl/Wp.WpfDemo.UIL.TestHandyControl.csproj
@@ -66,6 +66,14 @@
     <Compile Include="Views\Windows\Window1.xaml.cs">
       <DependentUpon>Window1.xaml</DependentUpon>
     </Compile>
+    <Page Include="Styles\FlipClock.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Styles\FlipNumber.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Styles\Style.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
