--- a/Wp.WpfDemo/Wp.WpfDemo.Model/Wp.WpfDemo.Model.csproj
+++ b/Wp.WpfDemo/Wp.WpfDemo.Model/Wp.WpfDemo.Model.csproj
@@ -59,9 +59,11 @@
   <ItemGroup>
     <Compile Include="Entities\Assembly\AssemblySteperInfo.cs" />
     <Compile Include="Entities\Assembly\AssemblySteperItemInfo.cs" />
+    <Compile Include="Entities\UserInfo.cs" />
     <Compile Include="Enums\AssemblyStatus.cs" />
     <Compile Include="Enums\MsgType.cs" />
     <Compile Include="Enums\Navigation.cs" />
+    <Compile Include="Enums\UserAuthority.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
