新增加RadioButton测试

--- a/Wp.WpfDemo/Wp.WpfDemo.BLL/Wp.WpfDemo.BLL.csproj
+++ b/Wp.WpfDemo/Wp.WpfDemo.BLL/Wp.WpfDemo.BLL.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Converters\MsgConverters\TitleConverter.cs" />
     <Compile Include="Converters\NavigationConverters\NavigationHeadConverter.cs" />
     <Compile Include="Converters\NavigationConverters\NavigationIconConverter.cs" />
+    <Compile Include="Converters\RadioButtonConverter.cs" />
     <Compile Include="Helpers\PasswordBoxHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
