--- a/Wp.WpfDemo/Wp.WpfDemo.UIL/Wp.WpfDemo.UIL.csproj
+++ b/Wp.WpfDemo/Wp.WpfDemo.UIL/Wp.WpfDemo.UIL.csproj
@@ -220,6 +220,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Styles\News\MD.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Styles\PageStyles.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
